--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -5,9 +5,8 @@ on:
   pull_request:
 
 jobs:
-  test:
+  test-linux:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -16,8 +15,7 @@ jobs:
         java-version: 11
     - name: Build with Ant
       working-directory: ./build
-      run: |
-        ant clean build
+      run: ant clean build
     - name: Install X virtual framebuffer
       run: sudo apt-get install -y xvfb
     - name: Run tests
@@ -25,3 +23,18 @@ jobs:
       run: xvfb-run --auto-servernum --server-args "-screen 0 1024x768x24" ant test
     - name: Cleanup xvfb
       uses: bcomnes/cleanup-xvfb@v1
+
+  test-windows:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Build with Ant
+      working-directory: ./build
+      run: ant clean build
+    - name: Run tests
+      working-directory: ./app
+      run: ant test
