--- a/app/build.xml
+++ b/app/build.xml
@@ -110,6 +110,7 @@
     </copy>
 
     <junit printsummary="yes" dir="${work.dir}" fork="true" showoutput="yes" failureproperty="test.failed">
+      <jvmarg value="-Dlog4j.dir=."/>
       <jvmarg value="-Djava.library.path=${java.additional.library.path}"/>
       <jvmarg value="-DWORK_DIR=."/>
       <jvmarg value="-ea"/>
