--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -28,11 +28,16 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Download JDK 11
+   #  run: curl -O "http://static.azul.com/zulu/bin/zulu11.37.17-ca-jdk11.0.6-win_i686.zip"
+      run: curl -O "http://static.azul.com/zulu/bin/zulu11.37.19-ca-fx-jdk11.0.6-win_i686.zip"
     - name: Set up JDK 11
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@master
       with:
-        java-version: 11
+        version: 11
         architecture: x86
+       #jdkFile: ./zulu11.37.17-ca-jdk11.0.6-win_i686.zip
+        jdkFile: ./zulu11.37.19-ca-fx-jdk11.0.6-win_i686.zip
     - name: Build with Ant
       working-directory: ./build
       run: |
