--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -46,3 +46,25 @@ jobs:
     - name: Run tests
       working-directory: ./build
       run: ant test
+
+  test-macosx:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Install Ant
+      run: brew install ant
+    - name: Download and extract JRE 11 to bundle
+      run: |
+        wget "https://github.com/AdoptOpenJDK/openjdk11-binaries/releases/download/jdk-11.0.6%2B10/OpenJDK11U-jre_x64_mac_hotspot_11.0.6_10.tar.gz"
+        tar xvzf OpenJDK11U-jre_x64_mac_hotspot_11.0.6_10.tar.gz
+    - name: Build with Ant
+      working-directory: ./build
+      run: ant -DMACOSX_BUNDLED_JVM=../jdk-11.0.6+10-jre/Contents/Home clean build
+    - name: Run tests
+      working-directory: ./build
+      run: ant test
+
